--- a/addons/twh_racing_part/views/dashboard_views.xml
+++ b/addons/twh_racing_part/views/dashboard_views.xml
@@ -2,6 +2,6 @@
 <odoo>
     <record id="action_twh_dashboard" model="ir.actions.client">
         <field name="name">TWH Dashboard</field>
-        <field name="tag">twh_dashboard_action</field>
+        <field name="tag">twh_dashboard</field>
     </record>
 </odoo>
